<resources>
    <string name="app_name">CafeOrder</string>
    <string name="welcome">Welcome</string>
    <string name="cafe_logo">Cafe\'s logo</string>
    <string name="login_input">Login</string>
    <string name="password_input">Password</string>
    <string name="login_button">Log in</string>
    <string name="toast_add_info">Fill in all the fields</string>
    <string name="hello_user">Здравствуйте, %s! Что будете заказывать?</string>
    <string name="tea">Чай</string>
    <string name="coffee">Кофе</string>
    <string name="additions">Что добавить в ваш %s?</string>
    <string name="milk">Молоко</string>
    <string name="sugar">Сахар</string>
    <string name="lemon">Лимон</string>
    <string name="choose_type">Выберите тип напитка</string>
    <string name="send_order_button">Отправить заказ</string>

    <string name="default_name">клиент</string>
    <string name="default_pass">пароль</string>
    <string name="order">Клиент: %s\nПароль: %s\nНапиток: %s\nВид напитка: %s\n</string>
    <string name="need_additions">Необходимые добавки: </string>


    <string-array name="coffee_types">
        <item>Американо</item>
        <item>Эспрессо</item>
        <item>Латте</item>
    </string-array>

    <string-array name="tea_types">
        <item>Черный</item>
        <item>Зеленый</item>
        <item>Красный</item>
    </string-array>
</resources>
