<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@drawable/coffeebackground"
    android:gravity="center_horizontal|bottom"
    >




    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="25sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/editTextLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/fields"
        android:hint="@string/login_input"
        android:inputType="textPersonName"
        android:padding="10dp"

        android:shadowColor="@color/white"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/fields"
        android:hint="@string/password_input"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="10dp"

        android:shadowColor="@color/white"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/buttonEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/fields"
        android:drawableEnd="@drawable/ic_person_black_24dp"

        android:onClick="onClickEnterButton"
        android:padding="8dp"

        android:text="@string/login_button"
        android:textColor="@color/white" />
</LinearLayout>